# ChangeLog for app-cdr/graveman
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/graveman/ChangeLog,v 1.51 2012/05/03 07:51:50 jdhore Exp $

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> graveman-0.3.12_p5-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  09 Feb 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #85926

  27 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  graveman-0.3.12_p5-r1.ebuild:
  Fix slot-deps on gnome libs

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org> files/sox.patch:
  Fix patch to apply.

  10 May 2008; Samuli Suominen <drac@gentoo.org> +files/desktop-entry.patch,
  graveman-0.3.12_p5-r1.ebuild:
  Fix reversed deps and move G2CONF inside pkg_setup.

  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  -graveman-0.3.12_p5.ebuild, graveman-0.3.12_p5-r1.ebuild:
  ppc stable, bug #181518

  14 Jun 2007; Christoph Mende <angelos@gentoo.org>
  graveman-0.3.12_p5-r1.ebuild:
  Stable on amd64 wrt bug 181518

  12 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  graveman-0.3.12_p5-r1.ebuild:
  stable x86, bug 181518

  11 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  graveman-0.3.12_p5-r1.ebuild:
  Stable on sparc wrt #181518

  10 Jun 2007; Markus Rothe <corsair@gentoo.org>
  graveman-0.3.12_p5-r1.ebuild:
  Stable on ppc64; bug #181518

*graveman-0.3.12_p5-r1 (27 Jan 2007)

  27 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org> +files/sox.patch,
  +graveman-0.3.12_p5-r1.ebuild:
  Add patch to make graveman work with >=sox-12.18, bug #156595

  27 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  +files/fix-menu.patch, graveman-0.3.12_p5.ebuild:
  fix menu-entry, patch by Pacho Ramos, bug #159756

  13 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  graveman-0.3.12_p5.ebuild:
  Add missing pkgconfig DEPEND, bug #151132

  19 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>