@@ -1,8 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX desktop-entry.patch 544 SHA256 6f854c7e9c935321f534982b50d983ba7b73f4c833b20be016e90e167ce925ab SHA512 92c46a60de5676e0fbb4a22c0e382586b0ac165ad9346f6dd4363c9ec6b19225f80755605bdcf25fdbb834d0868c7040703847797f3b835bde0849be5a08204f WHIRLPOOL ccca6424041a64017751eb43ef89684617a2e7d9c4dd61eaa8bb10a853e3769c5aa8cb6cac678f041e2916b1b3cb6299eedcfc44167789f64b7f6c3ef9ee2f3d
 AUX joliet-long.patch 792 SHA256 86076e1ec0f01598db6bf4a56c03b6fe1da2e38194c1fc993d7f06a1b806625e SHA512 3b14fcd90f51ffb55c91e1714c01c9ecac61a449a6354032bd080754a0f32703794f0e34e2b50643f48cc64f35df5aa4527fe3b8125dc84a079384b8055508dc WHIRLPOOL 0af67fe8f6f73efcd03ad264211fa5cadd62ef611660123f69bade823237423931878136c6a781a8b9948d859a6ad9b728f26fc2591be871defded5ec7ba536f
 AUX rename.patch 501 SHA256 37e390b70c3045c5f038425077b86d51c8729101b8435384e5587373e7199ada SHA512 cc2d6d07e53ae9912162c3ac71ad6d9709313905d26cd85aeb1959420f087560ba60ce1015a3a4bb872f1bbc4fc0bab6f610f4fd9b2dbcfd2ed69fbb82d1f039 WHIRLPOOL e9c3a3798c4b639538d33c627f53c57f073051dee8010d3df73473f17ab0de758b69192f40e0715c9c7fed65d09837b2985d2195c9faf99cf3e0c9bfb0516d68
 AUX sox.patch 1432 SHA256 3935e27e9bdabb91bb33329f749c7fcdf44648f62a08421f52b67febd6d15560 SHA512 1a618e9573c5997ed3eac825b659ca7074064a7e9b930847535a4cc7825b937c6b23028c7b979852cc13aa318f2521ad64cf8b2ef869e6b8971052ff2e567e1d WHIRLPOOL ad6615aff9cbb54257420a5f31e6116ed0082dedcde84eaced024bd848b32d723cee182158e60eb1774fb22c948850947f19d9da3ebdc90914abcf080b0b37c7
 DIST graveman-0.3.12-5.tar.gz 962523 SHA256 c55a4b7b2bd0788f98ed39d752a38af522e8a5bce8bea45ce5455e4c3444a696 SHA512 c09ec1b5273411e61ee568260eb921bb10aafa90ccd0f4074228741c1f0470650368f96e595763d77b46c87fa4a038a1d5a3a022f8019afd5f772754f9636ee4 WHIRLPOOL 967e341f2b656ef872ada0f918a43a581ecedc7110481c49c912461ab8c7445837aad51a30c9ff220dfbf0f06f1872a90ea666cd88c6e6d937fcb4408a291b2a
 EBUILD graveman-0.3.12_p5-r1.ebuild 1422 SHA256 1e19100d904e78fa55a0f1b17520890b296fc9d0557cbf23fc36cb391ccc2e85 SHA512 197e6998eadb399b4a3dff4cbaae17505b3fb37ba5882f372c151435e6f7226dc4119af66ea2e2e282b70e05b6854ecf3982c83b5ce77256ed967a382c9cebce WHIRLPOOL cc97b6c9f79f8352a66918722e427244f3ebdbe5b4ef1f70c3bd5049e95589704a43f61397cad04f0496c5fbd64914208bd9a7f1ca1fe9936118debedcbf38af
-MISC ChangeLog 8217 SHA256 c65406c53f54b532fb4a89fe94ec6146d1faa24ab3fee671cc627f1602ec6d38 SHA512 6f0bee842d3515ebdd9ec75dc6f10e79f19dd39928d40d7076f556dd9d6f0bc2f2821d719489e26a8018947b4439e0e62ef00c0971a49f9c98b84bc924a684de WHIRLPOOL ba5d5a70ccdbcf9d4cc696e7e074efb247d473d1de0939bcfffe10fa10bbd9df756b95c69ee55d829a0502482d1aefb810bdd439e7d6e93638aeaa6b60bf5091
+EBUILD graveman-0.3.12_p5-r2.ebuild 1450 SHA256 a66969d432bdd0766cb5e6563566e7f16d368d5fda25b4c5f467924d78feba5f SHA512 e43d29e32568e708e7738a57c35d66b8d09d7c21fe33ed0bfc52b1cbd8aabc89a82b976dd2571e92f54cb7d9bca78c77cefb0ab017b9545f193719c8708a73b8 WHIRLPOOL 2362ba002afddb95ef7ffb533abccccf1d444d211e31aff051f66bb0f08dc08ce53b0f1c0f0c3e380bf59c90d7c968245828c3b8abe960bf8228d076c74d9e52
+MISC ChangeLog 8575 SHA256 7e6b5cea04f6af16b838abedf7bed64260a056273c1d5de8319c4e423b2f6a3e SHA512 fd9a8c9611f0a928447749430e240f6a7e024ef329ec3f533c47d4b729709f8efc2ce10568311a072ba66b6253f239aaf752d3ed04a73e7902c4b33d5854cff5 WHIRLPOOL b0c278ed488b048862e4af1ba3d786edb56cf588d12d84b6d6f91cec9b19b84662d4f44e19b3f351afece2d63ccdef3e00af01a13d8446e2094bd82e86faf0af
 MISC metadata.xml 166 SHA256 ce62d1e5b04e01d03a732ee6d33b3d500810de8e55af4a527c970e5b475735d8 SHA512 1534f47fd560004cf8965363536d60529b5f28a58e26bf3459bc062b76ad89b0310bb4d1e339bf271d6d150026db5a4068ac11f9e2a39b075bb8c26e925e4daa WHIRLPOOL 6373ff408cef4ca611267c74d1217a4addf1c03cf069f6855a19204eebed7a2f17561ea98ad62adab2e540dbdb42d030be15b7ddbd864e94a2bc1112aa68d571
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQEcBAEBCAAGBQJTO9+tAAoJEJWyH81tNOV95BUIALRLYtkInxtkE4hCGC3u0HXz
+eULC9mXdQgvWPckchId2Moe67kZTD1Cl7jOSCchHrNMxXwQ7qHuNTJNHTHYxrQ7r
+k1RYglIA8QuWI/xnA3lThNoKA8JFA/2EBQ0KLHPm9bo1WEu41uhwdzH00xy2LIWH
+OWPVWayNRTLhtFOfcyW6CZpku475n2u1y06BDzItS3WVoFIkX2SQbABICTG0WRlV
+WnKfxbUWL2JfLLQR/8NtctaIYast2rgMIKBpg5Yu3suFZ8108jlioahfZYs0Uqf3
+G/LJS/tt9k97RiKN7AyEOAQPNB3pxCypT0QErDklwCCMnXhmENdhVJ0JjA9u5pE=
+=QDPx
+-----END PGP SIGNATURE-----
