@@ -1,6 +1,14 @@
 # ChangeLog for app-cdr/graveman
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/graveman/ChangeLog,v 1.51 2012/05/03 07:51:50 jdhore Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/graveman/ChangeLog,v 1.52 2014/04/02 10:00:36 tomwij Exp $
+
+*graveman-0.3.12_p5-r2 (02 Apr 2014)
+
+  02 Apr 2014; Tom Wijsman <TomWij@gentoo.org> +graveman-0.3.12_p5-r2.ebuild:
+  [QA] Revision bump to 0.3.12_p5-r2. EAPI 5, sorted dependencies, added missing
+  gdk-pixbuf:2 dependency as /usr/bin/graveman needs libgdk_pixbuf-2.0.so.0,
+  replaced deprecated G2CONF by gnome2_src_configure, src_unpack -->
+  src_prepare.
 
   03 May 2012; Jeff Horelick <jdhore@gentoo.org> graveman-0.3.12_p5-r1.ebuild:
   dev-util/pkgconfig -> virtual/pkgconfig
@@ -245,4 +253,3 @@
   +graveman-0.2-r20041227.ebuild:
   New GTK+2 cd recording utility.
   Thanks to Peter Gerbrandt for this ebuild!
-
